...
                                                <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="izX-9o-PcF" secondAttribute="height" multiplier="1:1" id="FHO-4h-AkJ"/>
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="AC"/>
                                                <connections>
                                                    <action selector="resetButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="7hR-mE-hFW"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qMj-Of-bCU">
                                                <rect key="frame" x="187.5" y="0.0" width="84" height="83.5"/>
...
